# Trilha-Python

codes/: error.py
codes/Project_Pytest/: mypy.ini  pytest.ini
codes/Project_Pytest/project_pytest/: pyproject.toml
codes/Project_Pytest/project_pytest/project_pytest/: main.py  run.py
codes/Project_Pytest/project_pytest/tests/: conftest.py  test_CepRegister.py
