[tool.poetry]
name = "project-pytest"
version = "0.1.0"
description = ""
authors = ["Bruno Barbosa Santos <bruno-bbs80@hotmail.com>"]
readme = "README.md"
packages = [{include = "project_pytest"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
types-requests = "^2.28.11.14"
mypy = "^1.0.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
